service: add infinte expiredate for issue: #119
