# services/api/docs/swagger.json
@@ -2958,6 +2958,11 @@
                 "group": {
                     "type": "string"
                 },
+                "infinite": {
+                    "type": "boolean",
+                    "default": false,
+                    "example": false
+                },
                 "password": {
                     "type": "string",
                     "maxLength": 32,
