# services/api/internal/services/ocserv_user/types.go
@@ -12,6 +12,7 @@ type CreateOcservUserData struct {
 	Username    string                   `json:"username" validate:"required,min=2,max=32"`
 	Password    string                   `json:"password" validate:"required,min=2,max=32"`
 	ExpireAt    string                   `json:"expire_at" validate:"omitempty" example:"2025-12-31"`
+	Infinite    bool                     `json:"infinite" validate:"omitempty" example:"false" default:"false"`
 	TrafficType string                   `json:"traffic_type" validate:"required,oneof=Free MonthlyTransmit MonthlyReceive TotallyTransmit TotallyReceive" example:"MonthlyTransmit"`
 	TrafficSize int                      `json:"traffic_size" validate:"omitempty,gte=0" example:"10737418240"` // 10 GiB
 	Description string                   `json:"description" validate:"omitempty,max=1024" example:"User for testing VPN access"`
@@ -22,6 +23,7 @@ type UpdateOcservUserData struct {
 	Group       *string                  `json:"group" example:"default"`
 	Password    *string                  `json:"password" validate:"min=2,max=32"`
 	ExpireAt    *string                  `json:"expire_at"  validate:"omitempty" example:"2025-12-31"`
+	Infinite    bool                     `json:"infinite" validate:"omitempty" example:"false" default:"false"`
 	TrafficType *string                  `json:"traffic_type" validate:"oneof=Free MonthlyTransmit MonthlyReceive TotallyTransmit TotallyReceive" example:"MonthlyTransmit"`
 	TrafficSize *int                     `json:"traffic_size" validate:"gte=0" example:"10737418240"` // 10 GiB
 	Description *string                  `json:"description" validate:"omitempty,max=1024" example:"User for testing VPN access"`
